--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,8 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+                <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+
+        
         {% block stylesheets %}
         {% endblock %}
 
@@ -15,46 +18,57 @@
     </head>
     <body>
         <header>
-            <nav>
-                <ul class="nav-list">
-                    <li><a href="{{ path('app_books') }}">Home</a></li>
-                    <li>
-                        <a href="#">Books</a>
-                        <div class="dropdown">
-                            {% for genre in get_genres() %}
-                                {% if genre is not empty %}
-                                    <a href="{{ path('app_books_by_genre', { genre: genre }) }}">{{ genre }}</a>
-                                {% endif %}
-                            {% endfor %}
-                        </div>
-                    </li>
-                    <li class="search-item">
-                        <form class="search-form" action="{{ path('app_search') }}" method="GET">
-                            <input type="text" name="query" placeholder="Search books...">
-                        </form>
-                    </li>
-                </ul>
-                <ul class="nav-list">
-                    {% if app.user is not null and app.user.id is not null %}
-                        <li>
-                            <a href="#" class="profile-dropdown-toggle">{{ app.user.username }}</a>
-                            <div class="dropdown">
-                                <a href="{{ path('app_profile') }}">Profile</a>
-                                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_MODERATOR') %}
-                                    <a href="{{ path('admin_books') }}">Manage Books</a>
-                                    <a href="{{ path('admin_reviews') }}">Manage Reviews</a>
-                                    <a href="{{ path('admin_users') }}">Manage Users</a>
-                                {% endif %}
-                                <a href="{{ path('app_logout') }}">Logout</a>
-                            </div>
-                        </li>
-                    {% else %}
-                        <li><a href="{{ path('app_login') }}">Login</a></li>
-                        <li><a href="{{ path('app_register') }}">Register</a></li>
-                    {% endif %}
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">BookBuddy</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-start" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_books') }}">Home</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    {% for genre in get_genres() %}
+                                        {% if genre is not empty %}
+                                            <a class="dropdown-item" href="{{ path('app_books_by_genre', { genre: genre }) }}">{{ genre }}</a>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <form class="form-inline my-2 my-lg-0" action="{{ path('app_search') }}" method="GET">
+                                    <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search books..." aria-label="Search">
+                                </form>
+                            </li>
+                            {% if app.user is not null and app.user.id is not null %}
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ app.user.username }}</a>
+                                    <div class="dropdown-menu" aria-labelledby="profileDropdown">
+                                        <a class="dropdown-item" href="{{ path('app_profile') }}">Profile</a>
+                                        {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_MODERATOR') %}
+                                            <a class="dropdown-item" href="{{ path('admin_books') }}">Manage Books</a>
+                                            <a class="dropdown-item" href="{{ path('admin_reviews') }}">Manage Reviews</a>
+                                            <a class="dropdown-item" href="{{ path('admin_users') }}">Manage Users</a>
+                                        {% endif %}
+                                        <a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a>
+                                    </div>
+                                </li>
+                            {% else %}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Login</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{{ path('app_register') }}">Register</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
+        
 
         <main>
                 {% block flashes %}
@@ -74,5 +88,9 @@
         <footer>
             <p>&copy; {{ "now"|date("Y") }} BookBuddy. All rights reserved.</p>
         </footer>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </body>
 </html>
