--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">BookBuddy</a>
+                    <a class="navbar-brand" href="{{ path('app_books') }}">BookBuddy</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
