--- a/templates/book/genre.html.twig
+++ b/templates/book/genre.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>{{ genre | capitalize }} Books</h1>
+       
+        <h1><a href="{{ path('app_books_by_genre', { genre: genre }) }}" class="genre-link">{{ genre | capitalize }} Books</a> <a href="{{ path('app_books') }}" class="btn btn-primary">Back to All Books</a></h1>
         <div class="book-container">
             {% for book in books %}
                 {% if book.approved %}  {# Check if the book is approved #}
