--- a/templates/admin/manage_reviews.html.twig
+++ b/templates/admin/manage_reviews.html.twig
@@ -18,7 +18,7 @@
                         <p>There are no reviews waiting for approval at this time.</p>
                     </div>
                 {% else %}
-                    <div class="review-grid">
+                    <div class="manage-grid">
                         {% for review in pendingReviews %}
                             <div class="review-card mb-3">
                                 <div class="review-card-body">
