--- a/templates/admin/manage_books.html.twig
+++ b/templates/admin/manage_books.html.twig
@@ -18,7 +18,7 @@
                         <p>There are no books waiting for approval at this time.</p>
                     </div>
                 {% else %}
-                    <div class="review-grid">
+                    <div class="manage-grid">
                         {% for book in pendingBooks %}
                             <div class="card mb-3">
                                 <div class="card-body">
