--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,7 +47,7 @@ body {
 
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
-    color: var(--text-light);
+    color: var(--text-dark);
     line-height: 1.2;
     margin-bottom: 1rem;
 }
@@ -70,10 +70,23 @@ a:hover {
     color: var(--primary-dark);
 }
 
+/* .dropdown-menu {
+    position: absolute;
+    right: auto;
+    left: 0;
+    transform-origin: top;
+  } */
+  
+  /* Fix right-aligned dropdowns for user menu */
+  .navbar-nav.ml-auto .dropdown-menu {
+    left: auto;
+    right: 0;
+  }
 
 .navbar-custom {
     background-color: var(--primary-color) !important;
   }
+  
 
 
 /* Main Content */
@@ -86,7 +99,6 @@ main {
 }
 
 /* Buttons */
-
 .btn {
     display: inline-block;
     padding: 0.8rem 1.5rem;
@@ -264,12 +276,12 @@ input:focus-visible {
     padding: 20px; 
     border: 1px solid #ccc; 
     border-radius: 8px; 
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-    background-color: #f9f9f9; /* Light background color */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    background-color: #f9f9f9; 
 }
 
 .form-group {
-    margin-bottom: 15px; /* Space between form groups */
+    margin-bottom: 15px; 
 }
 
 .form-control {
@@ -918,15 +930,12 @@ input:focus-visible {
 
     header nav ul {
         flex-direction: column;
-        align-items: center;
+        align-items: left;
     }
 
     header nav ul li {
         margin: 10px 0;
     }
-
-    
-
 
     /* Book Detail Page */
         .book-header {
@@ -1037,8 +1046,6 @@ input:focus-visible {
     border-radius: 4px;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
     .manage-grid {
         flex-direction: column; /* Stack review cards vertically */
     }
@@ -1063,4 +1070,4 @@ input:focus-visible {
     .submitted-by {
         font-size: 0.8rem; /* Adjust font size for mobile */
     }
-}
+
