--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,6 +48,23 @@
                             </li>
                             {% if app.user is not null and app.user.id is not null %}
                                 <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="notificationsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Notifications <span class="badge bg-danger">{{ app.user.notifications|length }}</span>
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="notificationsDropdown">
+                                        {% if app.user.notifications is not empty %}
+                                            {% for notification in app.user.notifications %}
+                                                <div class="dropdown-item d-flex justify-content-between">
+                                                    <span>{{ notification.message }}</span>
+                                                    <a href="{{ path('delete_notification', { index: loop.index0 }) }}" class="text-danger" onclick="return confirm('Are you sure you want to delete this notification?');">Delete</a>
+                                                </div>
+                                            {% endfor %}
+                                        {% else %}
+                                            <a class="dropdown-item" href="#">No notifications</a>
+                                        {% endif %}
+                                    </div>
+                                </li>
+                                <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ app.user.username }}</a>
                                     <div class="dropdown-menu" aria-labelledby="profileDropdown">
                                         <a class="dropdown-item" href="{{ path('app_profile') }}">Profile</a>
