--- a/templates/book/search.html.twig
+++ b/templates/book/search.html.twig
@@ -43,14 +43,29 @@
                     <div class="filter-group">
                         <h4>Rating</h4>
                         <label class="filter-option">
-                            <input type="radio" name="rating" value="4+"
-                                {% if selectedRating == '4+' %}checked{% endif %}>
-                            4+ stars
+                            <input type="radio" name="rating" value="10"
+                                {% if selectedRating == '10' %}checked{% endif %}>
+                            10 
                         </label>
                         <label class="filter-option">
-                            <input type="radio" name="rating" value="3+"
-                                {% if selectedRating == '3+' %}checked{% endif %}>
-                            3+ stars
+                            <input type="radio" name="rating" value="8+"
+                                {% if selectedRating == '8+' %}checked{% endif %}>
+                            8+ 
+                        </label>
+                        <label class="filter-option">
+                            <input type="radio" name="rating" value="6+"
+                                {% if selectedRating == '6+' %}checked{% endif %}>
+                            6+ 
+                        </label>
+                        <label class="filter-option">
+                            <input type="radio" name="rating" value="4+"
+                                {% if selectedRating == '4+' %}checked{% endif %}>
+                            4+ 
+                        </label>
+                        <label class="filter-option">
+                            <input type="radio" name="rating" value="1+"
+                                {% if selectedRating == '1+' %}checked{% endif %}>
+                            1+ 
                         </label>
                     </div>
 
