--- a/templates/admin/manage_reviews.html.twig
+++ b/templates/admin/manage_reviews.html.twig
@@ -49,8 +49,10 @@
                                                     onclick="window.location.href='{{ path('admin_approve_review', { id: review.id }) }}'">
                                                 <i class="fas fa-check me-1"></i> Approve
                                             </button>
-                                            <button class="btn btn-danger" 
-                                                    onclick="if(confirm('Are you sure you want to delete this review?')) window.location.href='{{ path('admin_delete_review', { id: review.id }) }}'">
+                                            <button class="btn btn-danger delete-btn"
+                                                    data-url="{{ path('admin_delete_review', { id: review.id }) }}"
+                                                    data-title="Confirm Review Deletion"
+                                                    data-message="Are you sure you want to delete this review?">
                                                 <i class="fas fa-trash me-1"></i> Delete
                                             </button>
                                         </div>
@@ -63,4 +65,6 @@
             </div>
         </div>
     </div>
+
+    <script src="{{ asset('js/confirmation-modal.js') }}"></script>
 {% endblock %}
