--- a/templates/admin/manage_users.html.twig
+++ b/templates/admin/manage_users.html.twig
@@ -31,9 +31,19 @@
                                 <tr>
                                     <td><a href="{{ path('app_public_profile', { username: user.username }) }}">{{ user.username }}</a></td>
                                     <td>
-                                        <button type="button" class="btn btn-danger" onclick="window.location.href='{{ path('admin_delete_user', { id: user.id }) }}'; return confirm('Are you sure you want to delete this user?');">Delete</button>
+                                    <button type="button" class="btn btn-danger delete-btn"
+                                        data-url="{{ path('admin_delete_user', { id: user.id }) }}"
+                                        data-title="Confirm User Deletion"
+                                        data-message="Are you sure you want to delete this user?">
+                                        Delete
+                                    </button>
                                         {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
-                                            <button type="button" class="btn btn-warning" onclick="window.location.href='{{ path('admin_make_user_mod', { id: user.id }) }}'; return confirm('Are you sure you want to make this user a moderator?');">Make moderator</button>
+                                            <button type="button" class="btn btn-warning make-moderator-btn"
+                                                data-url="{{ path('admin_make_user_mod', { id: user.id }) }}"
+                                                data-title="Confirm Moderator Status"
+                                                data-message="Are you sure you want to make this user a moderator?">
+                                                Make moderator
+                                            </button>
                                         {% endif %}
                                     </td>
                                 </tr>
@@ -44,4 +54,8 @@
             </div>
         </div>
     </div>
+
+    <script src="{{ asset('js/confirmation-modal.js') }}"></script>
+
+
 {% endblock %} 
